work/yaml/keycloak/keycloak-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress-whitelist: "*.rdev.tech"
  name: keycloak
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: keycloak
spec:
  rules:
  - host: keycloak-dev.rdev.tech
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 80
  tls:
  - hosts:
    - keycloak-dev.rdev.tech
    secretName: keycloak-dev-tls-pem
---
apiVersion: v1
kind: Endpoints
metadata:
  name: keycloak
subsets:
  - addresses:
      - ip: 192.168.81.104
    ports:
      - port: 443

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 443
